Bug 1225571 - Move the code to update the SPCSPS from repaint request handling to when the resolution is updated in the presShell. r=botond

--HG--
extra : commitid : JglAPUfEC3G